tests/src/frontend/typechecking/invalid/overridable_private2.sk
base class Foo {
  overridable private const i: Int = 100;
}
